<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:paddingTop="15dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devicename"
                android:textSize="25sp"/>

        <EditText
                android:id="@+id/et_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:textSize="25sp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/pincode"
                android:textSize="25sp"/>

        <EditText
                android:id="@+id/et_pin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_connect"
                    android:textSize="23sp"/>

            <ToggleButton
                    android:id="@+id/auto_connect_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_answer"
                    android:textSize="23sp"/>

            <ToggleButton
                    android:id="@+id/auto_answer_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imei"
                    android:textSize="23sp"/>

            <TextView
                    android:id="@+id/tv_imei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_bdaddr"
                    android:textSize="23sp"/>
            <TextView
                    android:id="@+id/tv_local_bdaddr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textSize="23sp"/>
            <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>